--- a/GGUF_file_conversion_using_huggingface.ipynb
+++ b/GGUF_file_conversion_using_huggingface.ipynb
@@ -5700,7 +5700,7 @@
         "import os\n",
         "\n",
         "# Set the token as an environment variable (recommended for security)\n",
-        "os.environ[\"HUGGING_FACE_HUB_TOKEN\"] = \"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\"\n",
+        "os.environ[\"HUGGING_FACE_HUB_TOKEN\"] = \"Put your hugging face token here\"\n",
         "\n",
         "api = HfApi()\n",
         "#change your-own-account/Indic-gemma-2b-finetuned-sft-Navarasa-2.0.gguf\n",
